--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.1.0",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
