--- a/package.json
+++ b/package.json
@@ -8,14 +8,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.4",
+    "@editorjs/paragraph": "^2.8.0",
+    "axios": "^0.24.0",
+    "form-data": "^4.0.0",
+    "formidable": "^2.0.1",
+    "mongodb": "^4.3.0",
+    "next": "12.0.7",
+    "quill": "^1.3.7",
+    "quill-delta": "^4.2.2",
+    "quill-image-uploader": "^1.2.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-currency-input-field": "^3.6.0",
+    "react-dom": "17.0.2",
+    "react-quilljs": "^1.2.17",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
     "@svgr/webpack": "^6.1.0",
+    "@types/formidable": "^2.0.3",
     "@types/node": "16.11.11",
+    "@types/quill": "^2.0.9",
     "@types/react": "17.0.37",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.0",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
@@ -24,6 +39,6 @@
     "postcss": "^8.4.4",
     "prettier": "^2.5.0",
     "tailwindcss": "^2.2.19",
-    "typescript": "4.5.2"
+    "typescript": "4.5.4"
   }
 }
