--- a/package.json
+++ b/package.json
@@ -9,25 +9,35 @@
   },
   "dependencies": {
     "@editorjs/paragraph": "^2.8.0",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/validator": "^13.7.1",
     "axios": "^0.24.0",
+    "bolt11": "^1.3.4",
+    "date-fns": "^2.28.0",
     "form-data": "^4.0.0",
     "formidable": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
-    "next": "12.0.7",
+    "next": "12.0.10",
+    "node-cache": "^5.1.2",
+    "qrcode.react": "^1.0.1",
     "quill": "^1.3.7",
     "quill-delta": "^4.2.2",
+    "quill-delta-to-html": "^0.12.0",
     "quill-image-uploader": "^1.2.2",
     "react": "17.0.2",
     "react-currency-input-field": "^3.6.0",
     "react-dom": "17.0.2",
     "react-quilljs": "^1.2.17",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@svgr/webpack": "^6.1.0",
     "@types/formidable": "^2.0.3",
-    "@types/node": "16.11.11",
+    "@types/node": "17.0.16",
+    "@types/qrcode.react": "^1.0.2",
     "@types/quill": "^2.0.9",
     "@types/react": "17.0.37",
     "@types/uuid": "^8.3.4",
